# osmo-e1d

./: .gitignore  .gitreview  COPYING  Doxyfile.in  Makefile.am  README.md  TODO-RELEASE  configure.ac  libosmo-e1d.pc.in  libosmo-octoi.pc.in
contrib/: Makefile.am  jenkins.sh  osmo-e1d.spec.in
contrib/e1-prbs-test/: Makefile  README  ice40-rx.c  internal.h  main.c  prbs.c  rx.c  tx.c  utils.c
contrib/systemd/: Makefile.am  osmo-e1d.service
debian/: changelog  control  copyright  libosmo-e1d-dev.install  libosmo-e1d.install  libosmo-octoi-dev.install  libosmo-octoi0.install  osmo-e1d.install  rules
doc/: Makefile.am
doc/examples/: Makefile.am  osmo-e1d-octoi-client.cfg  osmo-e1d-octoi-server.cfg  osmo-e1d-vpair.cfg
doc/manuals/: Makefile.am  osmoe1d-usermanual-docinfo.xml  osmoe1d-usermanual.adoc
doc/manuals/chapters/: client-interface.adoc  drivers.adoc  overview.adoc  running.adoc  tdmoip.adoc
include/: Makefile.am
include/osmocom/e1d/: proto.h  proto_clnt.h  proto_srv.h  version.h.tpl
include/osmocom/octoi/: e1oip_proto.h  octoi.h  version.h.tpl
src/: Makefile.am  ctl.c  dahdi_trunkdev.c  e1_gsmtap.c  e1d-fr-test.c  e1d-ts-pipe.c  e1d.h  e1oip.c  frame_relay.c  frame_relay.h  ice1usb_proto.h  intf_line.c  log.c  log.h  mux_demux.c  osmo-e1d.c  osmo-e1gen.c  proto.c  proto_clnt.c  proto_srv.c  usb.c  usb.h  vpair.c  vty.c
src/e1gen/: osmo_e1f.c
src/octoi/: Makefile.am  e1oip.c  e1oip.h  frame_fifo.c  frame_fifo.h  frame_rifo.c  frame_rifo.h  libosmo-octoi.map  octoi.c  octoi.h  octoi_clnt_fsm.c  octoi_clnt_vty.c  octoi_fsm.c  octoi_fsm.h  octoi_sock.c  octoi_sock.h  octoi_srv_fsm.c  octoi_srv_vty.c  octoi_vty.h
tests/: Makefile.am  raw_test.c  testsuite.at
tests/rifo/: Makefile.am  rifo_test.c  rifo_test.ok
